--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -11,6 +11,7 @@
   border-radius: 100px;
   border: 2px solid #007BFF;
   margin: 25px;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
 }
 
 .technologies {
