--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,10 +1,10 @@
 
 .charles {
-  border: 5px solid #4b4646;
+  border: 5px solid #f14e32;
   border-radius: 10%;
   height: 18em;
   margin: 2rem 0;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 15px rgba(0, 0, 0, 0.1);
 }
 
 .summary {
@@ -92,4 +92,6 @@
   align-items: center;
   text-align: center;
 }
+
+
 
